Update form and post

--- a/ERPproject/forms/static/forms/style.css
+++ b/ERPproject/forms/static/forms/style.css
@@ -12,4 +12,24 @@ img {
   margin: 20px;
 }
 
+input{
+    padding:5px;
+    border:2px solid #ccc;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+}
+
+input:focus {
+    border-color:#333;
+}
+
+input[type=submit] {
+    padding:5px 15px;
+    background:#ccc;
+    border:0 none;
+    cursor:pointer;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+}
+
 
