--- a/ERPproject/forms/templates/contact.html
+++ b/ERPproject/forms/templates/contact.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <img src="../static/forms/sap-logo.png" alt="SAP Logo" width="10%">
-    <form action="/graph/" method="post">
+    <form action="/contacts/" method="post">
         {% csrf_token %}
-        {{ contact_form.as_p }}
+        {{ form }}
     <input type="submit" value="Submit">
 </form>
 </body>
