is_running and is_stopped buttons

--- a/django_server/erpsim_helper/templates/admin/change_form.html
+++ b/django_server/erpsim_helper/templates/admin/change_form.html
@@ -2,9 +2,11 @@
 {% load i18n %}
 
 {% block submit_buttons_bottom %}
-    <div class="submit-row">
-       <input type="submit" value="{% trans 'Pause' %}" name="_pause" />
-    </div>
-
+    {% if not is_stopped %}
+        <div class="submit-row">
+            {% if is_game_running %}<input type="submit" value="{% trans 'Pause' %}" name="_pause" />{% else %}<input type="submit" value="{% trans 'Play' %}" name="_play" />{% endif %}
+            <input type="submit" value="{% trans 'Stop' %}" name="_stop" />
+        </div>
+    {% endif %}
     {{ block.super }}
 {% endblock %}
