--- a/django_server/erpsim_helper/templates/admin/change_form.html
+++ b/django_server/erpsim_helper/templates/admin/change_form.html
@@ -2,11 +2,13 @@
 {% load i18n %}
 
 {% block submit_buttons_bottom %}
-    {% if not is_stopped %}
-        <div class="submit-row">
-            {% if is_game_running %}<input type="submit" value="{% trans 'Pause' %}" name="_pause" />{% else %}<input type="submit" value="{% trans 'Play' %}" name="_play" />{% endif %}
-            <input type="submit" value="{% trans 'Stop' %}" name="_stop" />
-        </div>
+    {% if not add %}
+        {% if not is_stopped %}
+            <div class="submit-row">
+                {% if is_game_running %}<input type="submit" value="{% trans 'Pause' %}" name="_pause" />{% else %}<input type="submit" value="{% trans 'Play' %}" name="_play" />{% endif %}
+                <input type="submit" value="{% trans 'Stop' %}" name="_stop" />
+            </div>
+        {% endif %}
     {% endif %}
     {{ block.super }}
 {% endblock %}
