--- a/ERPproject/forms/templates/detail.html
+++ b/ERPproject/forms/templates/detail.html
@@ -1,20 +1,25 @@
-
-    {% load static %}
-    {% block title %}
-    <h1>Player details</h1>
-    {% endblock %}
-    {% block header %}
-    {% if messages %}
-        {% for message in messages %}
-            <h3>{{message}}</h3>
-        {% endfor %}
-    {% endif %}
-    {% endblock %}
-
-    {% block content %}
-    <ul>
-        <li>{{pers.gameNumber}}</li>
-        <li>{{pers.login}}</li>
-        <li>{{pers.password}}</li>
-    </ul>
-    {% endblock %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  {% block title %}<title>ERPSIM helper</title>{% endblock %}
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <!-- Add additional CSS in static file -->
+  {% load static %}
+  <link rel="stylesheet" href="{% static 'forms/style.css' %}">
+</head>
+<body>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-6">
+                <img class="img-fluid full-withradius border" src="data:image/png;base64, {{graph_sales_evo|safe}}">
+                <img class="img-fluid full-withradius border" src="data:image/png;base64, {{graph_inventory|safe}}">
+            </div>
+            <div class="col-sm-6">
+                <img class="img-fluid full-withradius border" src="data:image/png;base64, {{graph_storages|safe}}">
+            </div>
+        </div>
+  </div>
+</body>
+</html>
