--- a/django_server/erpsim_helper/templates/forms/detail.html
+++ b/django_server/erpsim_helper/templates/forms/detail.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'forms/style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static '../static/style.css' %}">
     <title>Player form</title>
 </head>
 
