--- a/django_server/erpsim_helper/templates/forms/detail.html
+++ b/django_server/erpsim_helper/templates/forms/detail.html
@@ -5,6 +5,7 @@
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static '../static/cssFiles/header.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static '../static/cssFiles/tips.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static '../static/cssFiles/style.css' %}">
 
     <title>Predictions</title>
 </head>
@@ -22,12 +23,84 @@
 <div id = "blockListTips">
 
     <h2 class = "start">List Of Tips</h2>
-    
-    <img src="{% static '../static/images/separator.png' %}" >
+
 
     <p class = "tip">#tip1</p>
     <p class = "tip">#tip2</p>
     <p class = "tip">#tip3</p>
 
-
 </div>
+
+<div id = "blockListTips">
+    <div id="tableaux">
+        <div class="tableau1">
+            <table id="tableau1table">
+                <caption>Repartition matrice</caption>
+                <thead id="tableau1thead">
+                <tr class="tableau1tr">
+                    <th class="tableau1th" scope="col">Products</th>
+                    <th class="tableau1th" scope="col">North</th>
+                    <th class="tableau1th" scope="col">South</th>
+                    <th class="tableau1th" scope="col">West</th>
+                </tr>
+                </thead>
+                <tbody>
+
+                {% for key, value in predictions.items %}
+                    <tr class="tableau1tr">
+                        <th class="tableau1th" scope="row">{{key}}</th>
+                        {% for j in value %}
+                            <td id="tableau1td">{{j}}</td>
+                        {% endfor %}
+                    </tr>
+                {% endfor %}
+
+                </tbody>
+            </table>
+        </div>
+
+
+
+        <div class="tableau2">
+            <table id="tableau2table">
+                <caption>Changement prix</caption>
+                <thead id="tableau2thead">
+                <tr class="tableau2tr">
+                    <th class="tableau2th" scope="col">Products</th>
+                    <th class="tableau2th" scope="col">Tendances</th>
+                    <th class="tableau2th" scope="col">Previsions</th>
+                </tr>
+                </thead>
+                <tbody>
+
+                {% for key, value in modifPrix.items %}
+                <tr class="tableau2tr">
+                    <th class="tableau2th" scope="row">{{key}}</th>
+                    {% for j in value %}
+                        {% if forloop.counter == 1 %}
+                            {% if j > 1 %}
+                                <td class="tableau2td" ><img src="../../static/greenarrowup.png" alt="" height=12 width=12>  {{j}}</img></td>
+                            {% endif %}
+                            {% if j < 1 %}
+                                <td class="tableau2td" ><img src="../../static/redarrowdown.png" alt="" height=12 width=12>  {{j}}</img></td>
+                            {% endif %}
+                            {% if j == 1 %}
+                                <td class="tableau2td" >{{j}}</img></td>
+                            {% endif %}
+                        {% endif %}
+
+                        {% if forloop.counter == 2 %}
+                        <td class="tableau2td" >{{j}}</td>
+                        {% endif %}
+                    {% endfor %}
+                </tr>
+                {% endfor %}
+
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
+
+
+<br><br><br><br><br>
