--- a/django_server/erpsim_helper/templates/forms/detail2.html
+++ b/django_server/erpsim_helper/templates/forms/detail2.html
@@ -86,7 +86,7 @@
                     {% endif %}
 
                     {% if forloop.counter == 2 %}
-                    <td id="tableau2td" >{{j}}</td>
+                    <td class="tableau2td" >{{j}}</td>
                     {% endif %}
                 {% endfor %}
             </tr>
