--- a/django_server/erpsim_helper/static/cssFiles/tips.css
+++ b/django_server/erpsim_helper/static/cssFiles/tips.css
@@ -10,8 +10,14 @@
     margin-right: 5%;
     margin-top: 3%;
 
+    padding-bottom: 20px;
+
 
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
+.start {
+    padding-top: 30px;
+    padding-bottom: 20px;
+}
   
