ceci est un commit pour ajouter les derenires modif

--- a/django_server/erpsim_helper/templates/forms/detail.html
+++ b/django_server/erpsim_helper/templates/forms/detail.html
@@ -46,7 +46,7 @@
     <div id="tableaux">
         <div class="tableau1">
             <table id="tableau1table">
-                <caption>Repartition matrice</caption>
+                <caption>Inventaire matrice</caption>
                 <thead id="tableau1thead">
                 <tr class="tableau1tr">
                     <th class="tableau1th" scope="col">Products</th>
@@ -56,6 +56,7 @@
                 </tr>
                 </thead>
                 <tbody>
+                
 
                 {% for key, value in predictions.items %}
                     <tr class="tableau1tr">
