--- a/django_server/erpsim_helper/templates/index.html
+++ b/django_server/erpsim_helper/templates/index.html
@@ -5,10 +5,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static '../static/css/header.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static '../static/css/tips.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static '../static/css/style.css' %}">
     <!-- Add additional CSS in static file -->
 </head>
 <body>
-<div class="container-fluid">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-sm-5">
                 {{ sales_distribution_plot|safe }}
@@ -22,12 +26,78 @@
                 {{ sales_evolution_plot|safe }}
             </div>
         </div>
+    </div>
 
-  </div>
+    <div id = "blockListTips">
+        <div id="tableaux">
+            <div class="tableau1">
+                <table id="tableau1table">
+                    <caption>Inventaire matrice</caption>
+                    <thead id="tableau1thead">
+                        <tr class="tableau1tr">
+                            <th class="tableau1th" scope="col">Products</th>
+                            <th class="tableau1th" scope="col">North</th>
+                            <th class="tableau1th" scope="col">South</th>
+                            <th class="tableau1th" scope="col">West</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for key, value in predictions.items %}
+                            <tr class="tableau1tr">
+                                <th class="tableau1th" scope="row">{{key}}</th>
+                                {% for j in value %}
+                                    <td id="tableau1td">{{j}}</td>
+                                {% endfor %}
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+
+
+
+            <div class="tableau2">
+                <table id="tableau2table">
+                    <caption>Changement prix</caption>
+                    <thead id="tableau2thead">
+                    <tr class="tableau2tr">
+                        <th class="tableau2th" scope="col">Products</th>
+                        <th class="tableau2th" scope="col">Tendances</th>
+                        <th class="tableau2th" scope="col">Previsions</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                        {% for key, value in modifPrix.items %}
+                        <tr class="tableau2tr">
+                            <th class="tableau2th" scope="row">{{key}}</th>
+                            {% for j in value %}
+                                {% if forloop.counter == 1 %}
+                                    {% if j > 1 %}
+                                        <td class="tableau2td" ><img src="../../static/greenarrowup.png" alt="" height=12 width=12>  {{j}}</img></td>
+                                    {% endif %}
+                                    {% if j < 1 %}
+                                        <td class="tableau2td" ><img src="../../static/redarrowdown.png" alt="" height=12 width=12>  {{j}}</img></td>
+                                    {% endif %}
+                                    {% if j == 1 %}
+                                        <td class="tableau2td" >{{j}}</img></td>
+                                    {% endif %}
+                                {% endif %}
+
+                                {% if forloop.counter == 2 %}
+                                <td class="tableau2td" >{{j}}</td>
+                                {% endif %}
+                            {% endfor %}
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 </body>
 <style>
-.allwidth {
-    justify-content: space-around;
-}
+    .allwidth {
+        justify-content: space-around;
+    }
 </style>
 </html>
