fix: missing products in stock plots

--- a/django_server/erpsim_helper/templates/index.html
+++ b/django_server/erpsim_helper/templates/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="container-fluid">
-        <div class="row" id="username">{{username}}</div>
+        <div class="row" id="username">{{username}} - {{day}}</div>
         <div class="row">
             <div class="col-sm-5">
                 {{ sales_distribution_plot|safe }}
