--- a/django_server/erpsim_helper/static/css/tips.css
+++ b/django_server/erpsim_helper/static/css/tips.css
@@ -1,18 +1,14 @@
 #blockListTips {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
-    background-color: #f7f7f7;
     
     margin-left: 5%;
     margin-right: 5%;
     margin-top: 3%;
 
     padding-bottom: 20px;
-
-
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 .start {
