--- a/django_server/erpsim_helper/static/css/header.css
+++ b/django_server/erpsim_helper/static/css/header.css
@@ -3,18 +3,19 @@ body {
     color: #1a1f36;
     box-sizing: border-box;
     word-wrap: break-word;
-    font-family: Palatino;
-    background-color: #f7f7f7;
+    background-color: beige;
   }
 
 
 #header {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
 
-    margin-left: 25%;
-    margin-right: 25%;
+    margin-bottom:20px;
+    margin-top:20px;
+    margin-left: 40px;
+    margin-right: 40px;
     --b: 10px; /* control the size */
     padding: var(--b);
     border: calc(2*var(--b)) solid #0000;
@@ -22,3 +23,23 @@ body {
     outline-offset: calc(-1*var(--b));
     background: conic-gradient(from 90deg at 1px 1px,#0000 90deg,#000 0);
   }
+
+#header2 {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+
+    margin-bottom:20px;
+    margin-top:20px;
+    margin-left: 60px;
+    margin-right: 60px;
+
+    padding-top:10px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+    background-color: white;
+  }
+
+.headerdiv {
+   font-size : 20px;
+   align-items: center;
+}
