--- a/django_server/erpsim_helper/static/css/style.css
+++ b/django_server/erpsim_helper/static/css/style.css
@@ -26,6 +26,7 @@ input[type=submit] {
 
 #tableaux {
     display: flex;
+
 }
 
 
@@ -111,8 +112,9 @@ caption {
 
 
 .tableau1 {
-    padding-right : 3%;
-    padding-left : 3%;
+        margin:10px;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+    background-color:white;
 }
 
 /* TABLEAU  2 */
@@ -190,8 +192,9 @@ tbody .tableau2tr {
 }
 
 .tableau2 {
-    padding-right : 3%;
-    padding-left : 3%;
+        margin:10px;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+    background-color:white;
 }
 
 
