--- a/django_server/erpsim_helper/static/css/header.css
+++ b/django_server/erpsim_helper/static/css/header.css
@@ -40,6 +40,15 @@ body {
   }
 
 .headerdiv {
-   font-size : 20px;
+   font-size : 15px;
    align-items: center;
+    text-align :center;
+    justify-content  :center;
+    margin-bottom:-10px;
+}
+
+#informations{
+ display:flex;
+ flex-direction:column;
+
 }
