--- a/django_server/erpsim_helper/static/css/header.css
+++ b/django_server/erpsim_helper/static/css/header.css
@@ -6,30 +6,19 @@ body {
     background-color: beige;
   }
 
-
-#header {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-
-    margin-bottom:20px;
-    margin-top:20px;
-    margin-left: 40px;
-    margin-right: 40px;
-    --b: 10px; /* control the size */
-    padding: var(--b);
-    border: calc(2*var(--b)) solid #0000;
-    outline: 1px solid #000;
-    outline-offset: calc(-1*var(--b));
-    background: conic-gradient(from 90deg at 1px 1px,#0000 90deg,#000 0);
-  }
+html {
+      scroll-behavior: smooth;
+}
 
 #header2 {
+    position: sticky;
+    top: 20px;
+    z-index:50;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
 
-    margin-bottom:20px;
+    margin-bottom:30px;
     margin-top:20px;
     margin-left: 60px;
     margin-right: 60px;
@@ -44,11 +33,29 @@ body {
    align-items: center;
     text-align :center;
     justify-content  :center;
-    margin-bottom:-10px;
+    margin-bottom:-17px;
 }
 
 #informations{
  display:flex;
  flex-direction:column;
+ margin-bottom:10px;
 
+}
+
+#blockListGraphs{
+}
+
+#blockListStart {
+    height :170px;
+    margin-left:20%;
+    margin-right:20%;
+    margin-top:40px;
+    margin-bottom:20px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+    background-color: white;
 }
