--- a/django_server/erpsim_helper/templates/index.html
+++ b/django_server/erpsim_helper/templates/index.html
@@ -10,11 +10,16 @@
     <link rel="stylesheet" type="text/css" href="{% static '../static/css/tips.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static '../static/css/style.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static '../static/css/main.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static '../static/css/button.css' %}">
     <!-- Add additional CSS in static file -->
 </head>
 <body>
 
    <div id="header2" >
+
+       <div>
+           <button onclick="window.location.href='#blockListStart'" class="button-6" role="button">Graphiques</button>
+       </div>
 
        <div id="informations">
 
@@ -35,8 +40,24 @@
             </div>
 
        </div>
+
+       <div>
+           <button onclick="window.location.href='#blockListTips'" class="button-6" role="button">Prévisions</button>
+       </div>
    </div>
 
+   <div id="blockListStart">
+
+       <h2>Conseils départ
+       <hr></h2>
+       <p>Repartir les stocks en mettant 1/3 par entrepot</p>
+       <p>Augmentez les prix de 20% </p>
+
+   </div>
+
+   <div id="blockListGraphs">
+
+   </div>
 
     <div class="container-fluid">
         <div class="firstrow">
