Change from "Date" to "Date de simulation".

--- a/django_server/erpsim_helper/templates/index.html
+++ b/django_server/erpsim_helper/templates/index.html
@@ -27,7 +27,7 @@
                 <p>Joueur : {{username}}</p>
             </div>
                <div class="headerdiv">
-                <p>Date : {{simulation_date}}</p>
+                <p>Date de simulation : {{simulation_date}}</p>
             </div>
             <div class="headerdiv">
                 <p>Round : {{round}}</p>
