Correctifs interface joueur + correction faute de frappe Usage
Interface Joueur :
Nom des colonnes du tableau prix
Nom des produits dans le tableau des prix
Ecart entre les graphiques d'évolution

--- a/django_server/erpsim_helper/static/css/main.css
+++ b/django_server/erpsim_helper/static/css/main.css
@@ -1,11 +1,12 @@
 .graph {
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
     margin : 10px;
+    margin-bottom: 20px;
 }
 
 .firstrow {
     display : flex;
-    display-position : row;v
+    justify-content: space-evenly;
 
 }
 
