--- a/django_server/erpsim_helper/templates/index.html
+++ b/django_server/erpsim_helper/templates/index.html
@@ -47,8 +47,8 @@
 
        <h2>Conseils départ
        <hr></h2>
-       <p>Repartir les stocks en mettant 1/3 par entrepot</p>
-       <p>Augmentez les prix de 20% </p>
+       <p>Repartir les stocks en mettant 1/3 par entrepôt</p>
+       <p>Augmenter les prix de 20% </p>
 
    </div>
 
@@ -106,8 +106,8 @@
                     <thead id="tableau2thead">
                     <tr class="tableau2tr">
                         <th class="tableau2th" scope="col">Products</th>
-                        <th class="tableau2th" scope="col">Tendances</th>
-                        <th class="tableau2th" scope="col">Previsions</th>
+                        <th class="tableau2th" scope="col">Facteur d'augmentation</th>
+                        <th class="tableau2th" scope="col">Prix à appliquer</th>
                     </tr>
                     </thead>
                     <tbody>
